--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
+    "@remix-run/serve": "^2.13.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "isbot": "^4",
