--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/serve": "^2.13.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "isbot": "^4",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
